# fuxing-dazah

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  migrate_template_ownership.sh  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  products.json  prompt.md  pyproject.toml  test_feishu_notify.py  部署说明.md
.claude/: settings.local.json
.github/workflows/: ci.yml
.next/: trace
.next/cache/: .previewinfo
alembic/: env.py
alembic/versions/: 00eeb8dd4525_add_meter_schema_instrument_records_and_.py  06e6fb808f47_merge_heads.py  0fac3372e248_add_department_id_to_equipment_.py  137c5228d679_add_is_product_to_intermediate_tables.py  14fda41cfdd7_add_positions_table.py  15fda41cfdd8_add_position_trainings_table.py  17fda41cfdd0_add_actual_department.py  18fda41cfdd1_add_trainer_fields.py  19fda41cfdd2_seed_positions.py  1b6263216455_make_production_line_and_api_endpoint_.py  1fa57660ca98_add_alert_tables_and_update_energy_types.py  20fda41cfdd3_add_training_evaluations_table.py  21fda41cfdd4_seed_sop_data.py  24578faff0f7_add_equipment_status_logs.py  284c3b08d3dc_create_workflow_definitions_and_.py  2af364a150a5_merge_heads.py  3093dedbc980_add_equipment_tables.py  3481d7ec2630_add_missing_hr_contract_columns.py  425cd778d104_merge_3_heads.py  44765a397e77_add_department_id_to_equipments.py  4cfa619c6da0_add_equipment_id_and_equipment_name_to_.py  4ef5c94be179_merge_heads.py  4fb99c7c5b19_add_inspection_numeric_type.py  515181afd401_merge_meter_and_energy_branches.py  5c291751e3d1_add_energy_tables.py  5e4fc970632b_add_is_product_and_product_id_to_.py  5f70eb51dfc9_add_pending_execution_and_executing_to_.py  624188c7eb3a_merge_energy_and_meter_heads.py  62d4ceac12b4_add_departments_table_and_expand_user_.py  63a79de496da_add_stage_assignments_and_node_.py  63cd22be7097_add_responsible_person_id_to_equipments.py  68024feea3d7_baseline.py  6917a7dadfe6_fix_change_uniqueconstraint_to_partial_.py  6a2b07b83bb1_update_instrument_status_idle_to_in_use.py  717564ddd4e0_add_remark_to_instrument_and_gas_.py  77f1c0c605ba_merge_energy_and_safety_heads.py  79faec14363d_add_table_id_to_energy_type_configs.py  7e70c41a9cdc_add_energy_type_configs_table_and_relax_.py  824fbcebd3f2_drop_hazard_revision_tables.py  82b66e023746_add_meter_settings_table.py  (+32 more)
app/: main.py
app/api/: router.py
app/core/: audit.py  config.py  database.py  deps.py  events.py  logging_config.py  redis.py  response.py  security.py  storage.py  time.py
app/models/: base.py
app/shared/: module_registry.py
assets/hr/: 7.5培训签到表.docx
backend/: .env.example  .env.production.template  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  makefile  prompt.md  pyproject.toml
backend/.next/: trace-build
backend/app/: main.py
backend/docs/: architecture.md  development.md  (+1 more)
frontend/: .env.example  CLAUDE.md  Dockerfile  next.config.ts  openapi.json  package-lock.json  package.json  pnpm-lock.yaml
public/: calculator.html
scripts/: fix_positions.py  seed_positions.sql  update_training_status.py
src/: proxy.ts
tests/: conftest.py
员工培训教育管理规程/: 7.11培训效果评估表.docx  7.4培训通知书.docx
(+1546 files in other folders)
