[project]
name = "dazah-backend"
version = "0.1.0"
description = "原料药事业部工厂系统"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2",
    "pg8000>=1.31.5",
    "lark-oapi>=1.6.8",
    "pyjwt[crypto]>=2.10.0",
    "tqdm>=4.68.1",
    "openai>=2.41.0",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "croniter>=6.2.2",
    "fastmcp>=3.4.2",
    "minio>=7.2.0",
    "graphon>=0.5.3,<0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]
